# shikoku-mobile-app

./: .gitignore  README.md  docker-compose-prod.yml  docker-compose.db.yml  docker-compose.nginx.yml  docker-compose.yml  env.template  package-lock.json  package.json  requirements.txt
services/api/: Dockerfile.prod  docker-compose.yml  env.template  main.py  pyproject.toml  requirements.txt
services/api/alembic/: env.py
services/api/alembic/versions/: 0489357561bf_notification_entity.py  0960466b8cef_remove_unique_constraint_from_admin_id_.py  0bc7da614ca0_add_one_to_one_in_user_and_user_profile.py  0e1c943e839d_migration_at_2024_08_09_11_50_12.py  170bb48cf709_add_user_profile_tables.py  183839a0cfad_add_group_message_entity.py  1be48b5c440a_migration_at_2024_08_06_22_15_00.py  233f201cff21_reminder_entity.py  286df726983a_add_group_icon_in_group.py  2c2194e0fe37_notification_tbale_and_user_notification.py  318e6731eb74_add_tables.py  34d83a6d7df7_migration_at_2024_07_24_11_38_18.py  380acfde8811_migration_at_2024_08_08_19_01_50.py  3c0414d8fdf5_initial_migration.py  3c0414d8fdf5_recreate_add_group_migration.py  4342c2529d2e_store_total_like_and_comment.py  55effff55aa9_change_school_info_to_user.py  608632173fbd_add_one_to_one_in_user_and_user_profile.py  6dc35da108d1_post_comment_like_entity.py  7ca3c69eb1fd_school_info_profile.py  8f9e226adc48_migration_at_2024_08_08_19_02_51.py  9a3db3505179_migration_at_2024_09_04_08_46_26.py  9aaa578fd648_migration_at_2024_09_06_21_25_29.py  (+22 more)
services/api/config/: gunicorn_conf.py  logging_config.py  logging_middleware.py  middleware.py  middlewares.py
(+359 files in other folders)
